--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <script type="text/javascript" src="../dist/strong_event.js"></script>
+    <script type="text/javascript" src="../dist/demo.js"></script>
   </body>
 </html>
